--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run release
         id: run-release
         run: |
-          npx ts-node ./scripts/release.ts --ci-mode --release-as ${{ github.event.inputs.mode }}
+          npx tsx ./scripts/release.ts --ci-mode --release-as ${{ github.event.inputs.mode }}
           echo "new_version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
       - name: Generate Release Body
